--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 
 </head>
 
+<body>
+
+    <div class="game-board">
+        <img src="./images/mario.gif" class="mario ">
+        <img src="./images/pipe.png" class="pipe">
+        <img src="./Images/clouds.png" class="clouds">
+    </div>
+
+</body>
+
 </html>
 
 
